k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mini-anomaly-deployment
  namespace: mini-anomaly
  labels:
    app: mini-anomaly
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mini-anomaly
  template:
    metadata:
      labels:
        app: mini-anomaly
    spec:
      containers:
        - name: mini-anomaly
          image: REPLACE_IMAGE
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
